# routes/api.php
@@ -13,7 +13,7 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-Route::group(['middleware' => 'auth:api'], function () {
+Route::group(['middleware' => ['api', 'multiauth:api,companies']], function () {
     Route::get('/user',  function(Request $request){
         return $request->user();
     });
@@ -23,9 +23,6 @@ Route::group(['middleware' => 'auth:api'], function () {
 // Route::post('/accept', 'AuthController@allow')->middleware('multiauth:companies');
 Route::post('register', 'AuthController@register');
 Route::post('registerCompany', 'AuthController@registerCompany');
-Route::get('/test', function () {
-    return "hello there";
-});
 Route::group(['middleware' => ['api', 'multiauth:companies']], function () {
     Route::get('/companies', function (Request $request) {
         // The instance of user authenticated (Admin or User in this case) will be returned
@@ -35,3 +32,9 @@ Route::group(['middleware' => ['api', 'multiauth:companies']], function () {
 Route::get('/login', function() {
     return "This is login";
 });
+
+//Tests
+Route::post('/addTest', 'TestController@add');
+Route::get('/tests', 'TestController@all');
+Route::delete('/test/{id}', 'TestController@delete');
+Route::put('/test/{id}', 'TestController@update');
